# funcstack

./: .gitignore  poetry.toml  pyproject.toml
funcstack/funcstack/: lazy_imports.py  version.py
funcstack/funcstack/containers/: effect.py
funcstack/funcstack/mixins/: __init__.py  pydantic.py
funcstack/funcstack/modules/: __init__.py  base.py  decorator.py  parallel.py  passthrough.py  sequential.py
funcstack/funcstack/modules/builders/: prompt.py
funcstack/funcstack/modules/converters/: html_to_text.py  jinja.py
funcstack/funcstack/modules/fault_handling/: __init__.py  fallbacks.py  retry.py
funcstack/funcstack/modules/fetchers/: link_content.py
funcstack/funcstack/modules/rankers/: lost_in_the_middle.py
funcstack/funcstack/typing/: __init__.py  artifact.py  blob.py  byte_stream.py  chat_message.py  link.py  text.py  tools.py
funcstack/funcstack/utils/: dicts.py  typing.py
libs/funcflow/: pyproject.toml
libs/funcstack/: pyproject.toml
libs/funcstack/funcstack/containers/: __init__.py  chunk.py
libs/funcstack/funcstack/mixins/: pydantic.py
libs/funcstack/funcstack/modules/: __init__.py  base.py  decorator.py  parallel.py  passthrough.py  sequential.py
libs/funcstack/funcstack/modules/builders/: __init__.py  prompt.py
libs/funcstack/funcstack/modules/converters/: __init__.py  html_to_document.py  html_to_text.py  jinja.py
libs/funcstack/funcstack/modules/fault_handling/: fallbacks.py  retry.py
libs/funcstack/funcstack/modules/fetchers/: link_content.py
libs/funcstack/funcstack/modules/mapping/: pick.py
libs/funcstack/funcstack/modules/passthrough/: pick.py
libs/funcstack/funcstack/modules/rankers/: lost_in_the_middle.py
libs/funcstack/funcstack/typing/: __init__.py  _vars.py  aliases.py  base.py  blob.py  byte_stream.py  document.py  protocols.py  text.py  types.py
libs/funcstack/funcstack/utils/: formatting.py  serialization.py  typing.py
libs/integrations/jina/: pyproject.toml
libs/integrations/pypdf/: pyproject.toml
libs/integrations/pypdf/funcstack_pypdf/: __init__.py  pdf_to_text.py  protocol.py
libs/integrations/tika/: pyproject.toml
libs/integrations/tika/funcstack_tika/: __init__.py  converter.py
notebooks/: sandbox.ipynb
